--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
+  display: flex;
+  width: 100vw;
+  min-height: fit-content;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.card-container {
+  justify-content: center;
+  border: 1px soild blue;
+  margin-top: 10vw;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.card {
+  margin: 20px;
+  border: 1px solid rgb(97, 160, 113);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  border-radius: 10px;
+  padding: 25px;
+  font-size: 0.5rem;
+  height: fit-content;
+  width: 200px;
+}
+
+span {
+  color: rgb(90, 160, 127);
+}
+
+.toppings {
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.name {
+  font-size: 1.4rem;
   text-align: center;
+  text-decoration: underline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  overflow: scroll;
+  width: 150px;
+  height: fit-content;
+  margin-top: 20px;
+  font-size: 1rem;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchTxt {
+  font-size: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search {
+  margin-top: 10vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
